[gd_scene load_steps=27 format=2]

[ext_resource path="res://PokemonSelect/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://img/pokemon-select/transparent-textbox-game-2.png" type="Texture" id=3]
[ext_resource path="res://PokemonSelect/PokemonData.gd" type="Script" id=4]
[ext_resource path="res://img/pokemon-select/PokemonTypes.png" type="Texture" id=5]
[ext_resource path="res://img/pokemon-select/oc_profile___hexagon_stat_graph_by_kristaldawn07_d6pkr0i-fullview.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 300, 360 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 300, 360 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 300, 360 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 300, 360 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1200, 0, 300, 360 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1500, 0, 300, 360 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 360, 300, 360 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 360, 300, 360 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 360, 300, 360 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 360, 300, 360 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1200, 360, 300, 360 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1500, 360, 300, 360 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 720, 300, 360 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 300, 720, 300, 360 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 600, 720, 300, 360 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 720, 300, 360 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1200, 720, 300, 360 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1500, 720, 300, 360 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 1080, 300, 360 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "types",
"speed": 5.0
} ]

[node name="PokemonData" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 198.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 1 )]
frame = 4

[node name="PokeSprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 767.783, 285.515 )
frame = 6

[node name="Button" type="Button" parent="."]
margin_left = 876.987
margin_top = 14.4452
margin_right = 986.987
margin_bottom = 62.4452
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionBox" type="TextureRect" parent="."]
margin_left = 36.0
margin_top = 508.0
margin_right = 610.0
margin_bottom = 748.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightHeight" type="RichTextLabel" parent="DescriptionBox"]
margin_left = 50.95
margin_top = 25.8
margin_right = 211.95
margin_bottom = 65.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="DescriptionBox"]
margin_left = 44.2161
margin_top = 86.108
margin_right = 534.216
margin_bottom = 215.108
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type1" type="AnimatedSprite" parent="."]
position = Vector2( 716.19, 627.36 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 20 )
animation = "types"

[node name="Type2" type="AnimatedSprite" parent="."]
position = Vector2( 890.148, 627.36 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 20 )
animation = "types"

[node name="ProfileHex" type="Sprite" parent="."]
position = Vector2( 283.997, 266.369 )
scale = Vector2( 0.405422, 0.382766 )
texture = ExtResource( 6 )

[node name="StatHex" type="Polygon2D" parent="ProfileHex"]
position = Vector2( -700.497, -635.115 )
scale = Vector2( 2.46657, 2.61256 )
color = Color( 0.403922, 1, 0.678431, 1 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
